welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-5: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estSurBiscuit() == true) {
    ^